# trooper-cli

./: .env-example  .gitignore  .pylintrc  LICENSE  README.md  high  install.sh  normal  pyproject.toml  requirements.txt  setup.py  test_web.py  trooper-web.service  trooper.sh  validate.py
.cursor/notepad/: OpenAI Realtime API State Machine.md
.cursor/rules/: always-use-new-openai-realtime-model-doc.mdc  dont-break-working-cli-code.mdc
config/: quotes.yaml  quotes.yaml.bak
logs/: processing_summary_20250207_092123.txt  processing_summary_20250207_092933.txt  processing_summary_20250208_080517.txt  processing_summary_20250208_080637.txt  processing_summary_20250208_080848.txt
src/: __init__.py
src/audio/: __init__.py  effects.py  errors.py  paths.py  player.py  polly.py  processor.py  utils.py
src/cli/: __init__.py  speak.py  trooper.py
src/openai/: __init__.py  ai2.py  ai_realtime_response.py  ai_response.py  config.py  conversation.py
src/quotes/: __init__.py  constants.py  manager.py  models.py
src/realtime/: .env.example  client.py
src/realtime-web/: server.py
src/realtime-web/static/css/: styles.css
src/realtime-web/static/js/: realtime-chat.js
src/realtime-web/templates/: realtime.html
src/web/: server.py
src/web/static/css/: style.css
src/web/static/js/: main.js
src/web/templates/: index.html
